banner overflow fix

--- a/_sass/pages/details.scss
+++ b/_sass/pages/details.scss
@@ -1,13 +1,12 @@
 .devDetails {
-  padding-top: var(--bs-gutter-x, .75rem);
-
+  @media (min-width: 576px) {
+    padding-top: var(--bs-gutter-x, .75rem);
+  }
 
   .banner-img-container {
 
     @media (max-width: 575.98px) {
-      margin-left: -12px;
-      margin-right: -12px;
-      margin-top: -12px;
+      height: 70vh;
     }
 
     .box-1, .box-2 {
@@ -185,8 +184,8 @@
       .overlay {
         position: absolute;
         top: 8px;
-        left: 12px;
-        right: 12px;
+        left: 8px;
+        right: 8px;
         bottom: 0;
         border-radius: 4px;
         background: rgba(32, 35, 48, 0.60);
